--- a/about.html
+++ b/about.html
@@ -34,21 +34,20 @@
     </nav>
 
 <section>
-      <img src="images/banner1.jpg" alt="Teaching Quote Banner" style="width: 100%; height: auto; max-height: 200px; object-fit: cover;">
+      <img src="images/banner1.jpg" alt="Teaching Quote Banner" style="width: 100%; height: auto; max-height: 300px; object-fit: cover;">
 </section>
 
 <!-- Main content -->
   <main>
       <section class="profile">
         <div>
-          <h2>Why teaching? Why now?</h2>
+          <h2>Didn't you just leave school? Why would you want to go back?</h2>
           <p>My name is Kiera Walkerden, and I am currently studying at university, pursuing a degree in education. I have a strong passion for working with young people and creating inclusive, engaging learning environments that support all students to reach their potential. Through my studies, I've developed an interest in behaviour management, student wellbeing, and designing meaningful, real-world learning experiences.</p>
           <p>Throughout my university journey, I've gained valuable experience through professional placements in diverse school settings. These placements have helped me apply theory to practice, reflect critically on my teaching, and develop my confidence in the classroom. I'm committed to continuous learning and look forward to making a positive contribution to the education sector.</p>
         <!-- Add further information here. This is only basic. -->
         </div>
-        <img src="images/profilepicture.jpg" alt="My Profile Picture">
+        <img src="images/profilepicture.png" alt="My Profile Picture">
       </section>
-    </section>
 
     <section>
       <h2>My University Course</h2>
