--- a/index.html
+++ b/index.html
@@ -35,47 +35,52 @@
 
     <!-- Small introduction with text on left side and photo of me on right side -->
     <main>
-        <section class="intro-section profile">
-            <div class="intro-text">
-                <h2>Welcome</h2>
-                <p>Welcome to my Digital Teaching Portfolio, developed as part of COMP208. This portfolio is designed to showcase my growth and practice as a pre-service teacher, as well as serve as a professional resource I can continue to build on throughout my teaching career.</p>
-            </div>
-            <aside class="intro-photo">
-                <img src="images/classroomphoto3.jpg" alt="Smiling portrait" class="img-center">
-            </aside>
-        </section>
+        <section class="intro-section profile" style="display: flex; align-items: center; gap: 20px;">
+    <div class="intro-text" style="flex: 1; min-width: 300px;">
+        <h2>Welcome</h2>
+        <p style="font-size: 18px;">Welcome to my Digital Teaching Portfolio, developed as part of COMP208. This portfolio is designed to showcase my growth and practice as a pre-service teacher, as well as serve as a professional resource I can continue to build on throughout my teaching career.</p>
+    </div>
+    <aside class="intro-photo" style="flex: 0 0 auto; max-width: 300px;">
+        <img src="images/classroomphoto3.jpg" alt="Smiling portrait" class="img-center" style="width: 100%; height: auto;">
+    </aside>
+</section>
     </main>
 
 <!-- Information about website -->
         <section style="margin-top: 0;">
             <h2 style="font-family: Georgia; font-size: 120%;">What to expect in this portfolio:</h2>
-                <p>Within these pages you will find:</p>
+                <p style="font-size: 18px;">Within these pages you will find:</p>
             <div style="display: flex; flex-direction: column; gap: 12px;">
             
             <article>
-            <div style="display: flex; align-items: center; gap: 8px;">
+            <div style="display: flex; align-items: flex-start; gap: 8px;">
             <img src="images/flower2.png" alt="Flower symbol" width="30px">
-            <p><b>About Me:</b> An overview of my background, studies, and journey into teaching.</p></div>
+            <p style="font-size: 16px;"><b>About Me:</b> An overview of my background, studies, and journey into teaching.</p>
+            </div>
 
-            <div style="display: flex; align-items: center; gap: 8px;">
+            <div style="display: flex; align-items: flex-start; gap: 8px;">
             <img src="images/flower3.png" alt="Flower symbol" width="30px">
-            <p><b>Teaching Philosophy:</b> My beliefs and values that shape my teaching pedagogy.</p></div>
+            <p style="font-size: 16px;"><b>Teaching Philosophy:</b> My beliefs and values that shape my teaching pedagogy.</p>
+            </div>
 
-            <div style="display: flex; align-items: center; gap: 8px;">
+            <div style="display: flex; align-items: flex-start; gap: 8px;">
             <img src="images/flower2.png" alt="Flower symbol" width="30px">
-            <p><b>University Projects:</b> Highlights of my tertiary projects that demonstrate my skills in design, technology and pedagogy.</p></div>
+            <p style="font-size: 16px;"><b>University Projects:</b> Highlights of my tertiary projects that demonstrate my skills in design, technology and pedagogy.</p>
+            </div>
 
-            <div style="display: flex; align-items: center; gap: 8px;">
+            <div style="display: flex; align-items: flex-start; gap: 8px;">
             <img src="images/flower3.png" alt="Flower symbol" width="30px">
-            <p><b>Unit Plans and Work Samples:</b> Examples of planning, resources, and student-focused work.</p></div>
+            <p style="font-size: 16px;"><b>Unit Plans and Work Samples:</b> Examples of planning, resources, and student-focused work.</p>
+            </div>
 
-            <div style="display: flex; align-items: center; gap: 8px;">
+            <div style="display: flex; align-items: flex-start; gap: 8px;">
             <img src="images/flower2.png" alt="Flower symbol" width="30px">
-            <p><b>Resume:</b> A page with my resume attached for reference.</p></div>
+            <p style="font-size: 16px;"><b>Resume:</b> A page with my resume attached for reference.</p>
+            </div>
 
-            <div style="display: flex; align-items: center; gap: 8px;">
+            <div style="display: flex; align-items: flex-start; gap: 8px;">
             <img src="images/flower3.png" alt="Flower symbol" width="30px">
-            <p><b>Contact:</b> A spot with information on how you can reach out to ask questions or collaborate.</p></div>
+            <p style="font-size: 16px;"><b>Contact:</b> A spot with information on how you can reach out to ask questions or collaborate.</p></div>
             </div>
         </article>
         </section>
