--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
       <h2>Get in Touch</h2>
       <p>If you’d like to connect about teaching, design, or collaboration, please reach out via email:</p>
       <div style="display: flex; align-items: center; gap: 8px; justify-content: flex-start; width: fit-content;">
-        <img src="images/emailsymbol.jpg" alt="Email symbol" style="width: 37px; height:auto;">
+        <img src="images/emailsymbol.jpg" alt="Email symbol" style="width: 37px; height:auto; margin-top: 25px;">
         <span style="white-space: nowrap;">kierawalkerden05@gmail.com</span>
       </div>
             
@@ -61,7 +61,7 @@
         
           <button type="submit">Send</button>
 
-          <input type="hidden" name="_next" value="http://127.0.0.1:3000/thankyou.html">
+          <input type="hidden" name="_next" value="https://kiera-walkerden.github.io/thankyou.html">
         </fieldset>
       </form>
     </section>
