--- a/index.html
+++ b/index.html
@@ -54,7 +54,26 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
 								<br>
 								<p style="font-size: 20px;"><b>My University Course</b></p>
 								<p>When I complete my course at ACU, I will graduate with 2 majors and 2 minors. My choice for these is outlined in the table below:</p>
-								<!-- insert table -->
+									<div class="table-wrapper">
+										<table class="alt">
+											<thead>
+												<tr>
+													<th>Majors:</th>
+													<th>Minors:</th>
+												</tr>
+											</thead>
+											<tbody>
+												<tr>
+													<td>Design and Technology</td>
+													<td>Textiles</td>
+												</tr>
+												<tr>
+													<td>Industrial Technology</td>
+													<td>Computing</td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
 							</article>
 
 						<!-- Teaching Philosophy -->
@@ -78,46 +97,97 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
 								<br>
 								<p style="font-size: 18px;"><b>Timber - Bluey Stool</b></p>
 								<p>This project was completed as part of a Timber assessment task, where I was required to design and construct a low stool for a specific user. I chose my two year old nephew, who loves Bluey, as the intended user. The stool was designed with appropriate dimensions to suit his size and to fit comfortably at his daily table. Additionally, the fabric design was themed to reflect Bluey, enhancing both functionality and aesthetic appeal.</p>
-								<!-- Insert images -->
+									<div class="image-row">
+										<img src="images/blueystool.jpeg" alt="Bluey Stool">
+										<img src="images/stoolwL.jpeg" alt="Bluey Stool with Lachlan">
+									</div>
 								<p>I began by designing the stool and cutting all timber components to size. The pieces were assembled using various joinery techniques, including the domino jointer, to ensure structural stability. I designed the fabric myself, which was printed at the university and then upholstered onto the stool. To refine the finish, I sanded the timber surfaces and applied a protective finish. The seat and backrest were shaped with a vacuum sealing process to create ergonomic curves.</p>
-								<!-- Insert CAD image -->
+									<div class="image-cad">
+										<img src="images/stoolcad.jpg" alt="Bluey Stool CAD drawing">
+									</div>
 								<br>
 								<p style="font-size: 18px;"><b>Timber - Heirloom Box</b></p>
 								<p>This project involved constructing an heirloom box as part of a Timber assessment task, with an emphasis on both joinery precision and decorative design. The box was designed to incorporate keyed mitre joints and a custom decorative veneer lid. I chose blackwood for its durability and aesthetic appeal, and designed a floral pattern for the veneer to enhance the visual impact.</p>
-								<!-- Insert images -->
+									<div class="image-row">
+										<img src="images/heirloomboxclosed.jpeg" alt="Heirloom Box closed">
+										<img src="images/heirloomboxopen.jpeg" alt="Heirloom Box open">
+									</div>
 								<p>After selecting and preparing the blackwood, I cut the components using precise measuring and cutting techniques. The decorative floral veneer was cut using a scroll saw and adhered to the lid through a vacuum sealing process to ensure a secure bond. The keyed mitre joints were carefully executed to produce a structurally sound and visually refined box. The finished piece demonstrated both technical skill in joinery and creativity in veneer design.</p>
-								<!-- Insert CAD image -->
+									<div class="image-cad">
+										<img src="images/heirloomboxcad.jpg" alt="Heirloom Box CAD drawing">
+										<img src="images/heirloomboxlidcad.jpg" alt="Heirloom Box lid CAD drawing">
+										<img src="images/heirloomboxbasecad.jpg" alt="Heirloom Box base CAD drawing">
+									</div>
 								<br>
 								<p style="font-size: 18px;"><b>Timber - Laminated Board</b></p>
 								<p>This project is a part of my first Timber assessment task in which I had to design and make a Laminated Board. As a part of this task I also needed to develop a maker's mark that would be laser engraved on to my board.</p>
-								<!-- Insert images -->
+									<div class="image-row">
+										<img src="images/laminatedboard1.jpeg" alt="Laminated Board front">
+										<img src="images/laminatedboard2.jpeg" alt="Laminated Board angle">
+									</div>
 								<p>For this project, I was required to select and cut multiple strips of timber, plane them until their surfaces were flush, arrange them in a cohesive order, and join them together using adhesive. Once the glue had fully dried, I sanded the assembly and applied grapeseed oil as a finish to ensure it was food safe.</p>
-								<!-- Insert CAD image -->
+									<div class="image-cad">
+										<img src="images/boardcad.jpg" alt="Laminated Board CAD drawing">
+									</div>
 								<br>
 								<p style="font-size: 18px;"><b>Metal - Tool Box</b></p>
 								<p>This project involved constructing a metal toolbox as part of my recent safety induction for metalwork. The aim was to produce a functional, durable toolbox while developing fundamental skills in measuring, cutting, bending, and assembling sheet metal. The project required careful planning, precision, and adherence to safety protocols throughout the fabrication process.</p>
-								<!-- Insert images -->
+									<div class="image-row">
+										<img src="images/toolbox1.JPEG" alt="Toolbox front">
+										<img src="images/toolbox2.JPEG" alt="Toolbox above">
+									</div>
 								<p>To begin, I marked out the required dimensions on the sheet metal and cut the pieces using metal snips. The sheet metal was then bent into the desired shapes using both the Magnabend and a pan brake. To prepare the components for assembly, I used a centre punch to mark the rivet locations and a power drill to create holes. Finally, the pieces were securely fastened together at each end using a riveting gun, resulting in a sturdy and functional toolbox.</p>
-								<!-- Insert more images -->
+								<!-- Insert image of side of box showing rivets -->
 								<br>
 								<p style="font-size: 18px;"><b>Metal - Jewellery Pair</b></p>
 								<p>This project required designing and producing a matching jewellery pair consisting of a fidget ring and a necklace, with connected aesthetic elements. The design incorporated a flower motif, with the ring and necklace sharing thematic cohesion. The project aimed to combine functional movement, material contrast, and detailed craftsmanship.</p>
-								<!-- Insert images -->
+									<div class="image-row">
+										<img src="images/jewellery.JPEG" alt="Jewellery pair">
+									</div>
 								<p>The ring band was crafted from silver, the flower petals from brass, and the flower centre from copper. I cut the components from sheet metal using a jewellery saw and a laser cutter to ensure precise shapes. The petals were joined to the ring band using a rivet made from copper wire, allowing the ring to spin. The metal pieces were shaped with a heat gun and finished by sanding and polishing. For the necklace, I created a copper wire circle, soldered it onto the chain, and attached the second flower component, completing the cohesive set.</p>
-								<!-- Insert CAD image -->
+								<!-- Insert CAD image once completed -->
+								<br>
+								<p style="font-size: 18px;"><b>Metal - Hacksaw</b></p>
+								<p>This project involved the design and manufacture of a fully functional metal hacksaw featuring a custom ergonomic handle. The task required the integration of digital design, advanced metalworking techniques, and safe work practices. Using Fusion 360, I designed a handle that was tailored for comfort and usability, which was later 3D printed to fit the dimensions of the hacksaw frame I constructed. The project also included the creation of a Safe Work Method Statement (SWMS) and a hand-drawn infographic poster identifying the parts and functions of the hacksaw. These can be found at the bottom of this project's section.</p>
+									<div class="image-row">
+										<img src="images/hacksaw.JPEG" alt="Hacksaw">
+									</div>
+								<p>The metal frame of the hacksaw was fabricated through multiple stages of cutting, forming, machining, and assembly. I began by cutting the metal to size using a cold saw, then heated and shaped it with an oxy-acetylene torch to achieve the correct form. A metal lathe and a manual hacksaw were used to create the detailed components. Holes were marked with a centre punch and drilled by hand before being threaded with an M4 tap. Once all components were prepared, they were welded together to form the complete frame. I then used a grinder to clean and refine the welds and overall finish. The frame was spray painted in a colour of my choice to achieve a smooth, professional surface. After the paint had dried, the 3D-printed ergonomic handle was attached using epoxy glue, completing the assembly.</p>
+								<p style="font-size: 12px;"><i>(Clicking on either document thumbnail will download a copy of the document.)</i></p>
+									<div class="image-row">
+										<img src="images/hacksawinfographic.jpg" alt="Hacksaw Infographic Poster"> <!-- add link to download document -->
+										<img src="images/hacksawswmsthumbnail.png" alt="Hacksaw SWMS thumbnail"> <!-- add link to download document -->
+									</div>
 								<br>
 								<p style="font-size: 18px;"><b>Textiles - Pyjama Set with Tote Bag</b></p>
 								<p>This project involved designing and constructing a coordinated sleepwear and storage bag set, consisting of two garments and a cloth tote bag. The set was intended to be both functional and visually cohesive, featuring an original textile design inspired by daisies. The project required the integration of commercial patterns and fabrics with student-designed printed elements to produce a finished set that reflects both personal creativity and technical skill.</p>
-								<!-- Insert images -->
-								<p>The elastic-waisted pants were made from poplin with a printed daisy pattern, cut and sewn from a commercial pattern. The T-shirt was a commercially purchased cotton-rich jersey, which I screen-printed with a custom daisy design inspired by my own tattoo. The tote bag was constructed from cotton drill, featuring a yellow body and a pocket made from the same fabric as the pants. I cut and sewed both the pants and bag, while the top required hand preparation for screen printing, followed by precise alignment and printing of my original design.</p>
-								<!-- Insert design illustrations image -->
+									<div class="image-row">
+										<img src="images/pyjamaset.JPEG" alt="Pyjama full set">
+										<img src="images/totebag.JPEG" alt="Tote Bag">
+										<img src="images/topprint.JPEG" alt="Pyjama set top screen print">
+									</div>
+								<p>The elastic-waisted pants were made from poplin with a printed daisy pattern, cut and sewn from a commercial pattern. The T-shirt was a commercially purchased cotton-rich jersey, which I screen-printed with a custom daisy design inspired by my own tattoo. The tote bag was constructed from cotton drill, featuring a yellow body and a pocket made from the same fabric as the pants. I cut and sewed both the pants and bag, while the top required hand preparation for screen printing, followed by precise alignment and printing of my original design. Below are my fashion illustration and production drawings for this set:</p>
+									<div class="image-row">
+										<img src="images/fashionillustration.jpg" alt="Pyjama set fashion illustration">
+										<img src="images/productiondrawing.jpg" alt="Pyjama set production drawing">
+									</div>
 								<br>
 								<p style="font-size: 18px;"><b>Textiles - Felt Bookmark & Banner</b></p>
 								<p>This project required the design and construction of two electronic textile items: a light-up felt bookmark (a hurdle task) and a felt banner with a variable LED light effect. Both items were intended to demonstrate the integration of hand-crafted textile techniques with functional soft-circuit electronics, combining aesthetics, functionality, and technical problem-solving. The overall theme for both items was floral, emphasizing colour, texture, and interactive light elements.</p>
-								<!-- Insert images -->
+									<div class="image-row">
+										<img src="images/bookmarkfront.JPEG" alt="Felt Bookmark front">
+										<img src="images/bookmarkback.JPEG" alt="Felt Bookmark back">
+										<img src="images/bannerfront.JPEG" alt="Felt Banner front"> <!-- Update image when completed -->
+										<!-- Add Banner backside image once completed -->
+									</div>
 								<p>For the light-up bookmark, I constructed a unique piece from commercial wool felt and hand-made felt, embedding a soft circuit with a power source, switch, and LED. The circuit was integrated through hand-stitching and embroidery, using chain stitch and lazy daisy motifs in yellow, orange, and green, with the LED positioned at the centre of the flower to illuminate it.</p>
 								<p>For the felt banner, I created a multi-layered, hand-stitched piece inspired by a classroom art activity. The design incorporated blended felt to emulate a watercolour effect, with hand-stitched flowers in purple, green, and blue. Three LEDs were embedded in the centres of selected flowers to create a variable light effect and a subtle three-dimensional quality. Both projects required experimentation with design options, careful cutting, hand-stitching, needle-felting, and integration of functional electronic components to achieve the intended visual and interactive outcomes.</p>
-								<!-- Insert CAD image -->
+									<div class="image-row">
+										<img src="images/bookmarkillustrationfront.JPEG" alt="Felt Bookmark illustration front">
+										<img src="images/bookmarkillustrationback.JPEG" alt="Felt Bookmark illustration back">
+										<img src="images/bannerinitialillustration.JPEG" alt="Felt Banner initial illustration">
+										<!-- Add Banner backside illustration once completed -->
+									</div>
 								<br>
 							</article>
 						
@@ -132,12 +202,18 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
 								<br>
 								<p><b>Lesson Topic: Design Industry Professions and Popular Designers</b></p>
 								<p>In this task students explore different design professions and how they work together, building understanding of collaboration in the design process and preparing for their case study.</p>
-								<!-- insert thumbnail image of resource next to text- click to download -->
+									<div class="image-row">
+										<img src="images/designindustryprofessions.png" alt="Design Industry Professions thumbnail">
+									</div>
+								<!-- move thumbnail image of resource to right side of text - click to download -->
 								<p style="font-size: 12px;"><i>Click on the image above to download this resource!</i></p>
 								<!-- put resources side by side -->
 								<p><b>Lesson Topic: Factors Affecting Design / Design Detective</b></p>
 								<p>In this task students will learn about factors that influence design by defining each factor with an example. They will then choose a product, identify which factors shaped its design, and use AI to check and extend their understanding.</p>
-								<!-- insert thumbnail image of resource next to text- click to download -->
+									<div class="image-row">
+										<img src="images/factorsaffectingdesign.png" alt="Factors Affecting Design thumbnail">
+									</div>
+								<!-- move thumbnail image of resource to right side of text - click to download -->
 								<p style="font-size: 12px;"><i>Click on the image above to download this resource!</i></p>
 							</article>
 
@@ -146,7 +222,10 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
                                 <h2 class="major">Resume & Professional Profile</h2>
 								<p style="font-size: 20px;"><b>Download My Resume!</b></p>
 								<p>Thank you for visiting my portfolio! If you’d like a closer look at my qualifications, experiences, and more relevant information, you can download my resume by clicking on the image to the right.</p>
-								<!-- Insert resume thumbnail on right side of text with link to download -->
+									<div class="image-row">
+										<img src="images/resumethumbnail.jpg" alt="Resume thumbnail">
+									</div>
+								<!-- move resume thumbnail image to right side of text - click to download -->
 								<br>
 								<p style="font-size: 20px;"><b>Professional Profile</b></p>
 								<p>I am currently studying a Bachelor of Education (Secondary)/Bachelor of Arts (Design Innovation and Technologies) at Australian Catholic University, and I am passionate about inspiring students through engaging, inclusive, and innovative learning experiences. My focus on Design and Technology education stems from a desire to help students think creatively, solve problems, and apply their knowledge in meaningful ways.</p>
