--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
                                 <h2 class="major">About Me</h2>
 								<span class="image main"><img src="images/banner1.jpg" alt="" /></span>
 								<p style="font-size: 20px;"><b>Didn't you just leave school? Why would you want to go back?</b></p>
-								<p>My name is Kiera Walkerden, and I am currently studying at university, pursuing a degree in education. I have a strong passion for working with young people and creating inclusive, engaging learning environments that support all students to reach their potential. Through my studies, I've developed an interest in behaviour management, student wellbeing, and designing meaningful, real-world learning experiences.</p>
+								<div class="image-with-text-pp">
+									<p>My name is Kiera Walkerden, and I am currently studying at university, pursuing a degree in education. I have a strong passion for working with young people and creating inclusive, engaging learning environments that support all students to reach their potential. Through my studies, I've developed an interest in behaviour management, student wellbeing, and designing meaningful, real-world learning experiences.</p>
+									<img src="images/profilepic.png" alt="Profile Picture">
+								</div>
 								<p>Throughout my university journey, I've gained valuable experience through professional placements in diverse school settings. These placements have helped me apply theory to practice, reflect critically on my teaching, and develop my confidence in the classroom. I'm committed to continuous learning and look forward to making a positive contribution to the education sector.</p>
 								<br>
 								<p style="font-size: 20px;"><b>My University Course</b></p>
@@ -154,9 +157,9 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
 									</div>
 								<p>The metal frame of the hacksaw was fabricated through multiple stages of cutting, forming, machining, and assembly. I began by cutting the metal to size using a cold saw, then heated and shaped it with an oxy-acetylene torch to achieve the correct form. A metal lathe and a manual hacksaw were used to create the detailed components. Holes were marked with a centre punch and drilled by hand before being threaded with an M4 tap. Once all components were prepared, they were welded together to form the complete frame. I then used a grinder to clean and refine the welds and overall finish. The frame was spray painted in a colour of my choice to achieve a smooth, professional surface. After the paint had dried, the 3D-printed ergonomic handle was attached using epoxy glue, completing the assembly.</p>
 								<p style="font-size: 12px;"><i>(Clicking on either document thumbnail will download a copy of the document.)</i></p>
-									<div class="image-row">
-										<img src="images/hacksawinfographic.jpg" alt="Hacksaw Infographic Poster"> <!-- add link to download document -->
-										<img src="images/hacksawswmsthumbnail.png" alt="Hacksaw SWMS thumbnail"> <!-- add link to download document -->
+									<div class="image-row-hsaw">
+										<a href="files/hacksawinfographic.pdf" download><img src="images/hacksawinfographic.jpg" alt="Hacksaw Infographic Poster"></a>
+										<a href="files/hacksaw_safe_work_method_statement.pdf" download><img src="images/hacksawswmsthumbnail.png" alt="Hacksaw SWMS thumbnail"></a>
 									</div>
 								<br>
 								<p style="font-size: 18px;"><b>Textiles - Pyjama Set with Tote Bag</b></p>
@@ -201,31 +204,32 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
 								<p>These unit resources were developed for a Stage 6 Design and Technology class in a comprehensive co-educational high school located in the diverse, metropolitan area of Wahroonga in Sydney. The school has a student population of approximately 1000 students, with 21% of students identifying as coming from language backgrounds other than English. The classroom context includes a mixed-ability cohort, including students with Individual Learning Plans (ILPs) and English as an Additional Language or Dialect (EAL/D) support requirements. Diagnostic and formative assessment data indicated a need for targeted support in literacy, critical thinking, and organisation of design ideas.</p>
 								<br>
 								<p><b>Lesson Topic: Design Industry Professions and Popular Designers</b></p>
-								<p>In this task students explore different design professions and how they work together, building understanding of collaboration in the design process and preparing for their case study.</p>
-									<div class="image-row">
-										<img src="images/designindustryprofessions.png" alt="Design Industry Professions thumbnail">
+									<div class="image-with-text">
+									<p>In this task students explore different design professions and how they work together, building understanding of collaboration in the design process and preparing for their case study.</p>
+											<div class="image-container">
+												<a href="files/design_industry_professions_and_popular_designers.pdf" download><img src="images/designindustryprofessions.png" alt="Design Industry Professions thumbnail"></a>
+												<p class="image-caption">Click on the image above to download this resource!</p>
+											</div>
 									</div>
-								<!-- move thumbnail image of resource to right side of text - click to download -->
-								<p style="font-size: 12px;"><i>Click on the image above to download this resource!</i></p>
 								<!-- put resources side by side -->
 								<p><b>Lesson Topic: Factors Affecting Design / Design Detective</b></p>
-								<p>In this task students will learn about factors that influence design by defining each factor with an example. They will then choose a product, identify which factors shaped its design, and use AI to check and extend their understanding.</p>
-									<div class="image-row">
-										<img src="images/factorsaffectingdesign.png" alt="Factors Affecting Design thumbnail">
+									<div class="image-with-text">
+									<p>In this task students will learn about factors that influence design by defining each factor with an example. They will then choose a product, identify which factors shaped its design, and use AI to check and extend their understanding.</p>
+										<div class="image-container">
+											<a href="files/factors_affecting_design.pdf" download><img src="images/factorsaffectingdesign.png" alt="Factors Affecting Design thumbnail"></a>
+											<p class="image-caption">Click on the image above to download this resource!</p>
+										</div>
 									</div>
-								<!-- move thumbnail image of resource to right side of text - click to download -->
-								<p style="font-size: 12px;"><i>Click on the image above to download this resource!</i></p>
 							</article>
 
 						 <!-- Resume -->
                             <article id="resume">
                                 <h2 class="major">Resume & Professional Profile</h2>
 								<p style="font-size: 20px;"><b>Download My Resume!</b></p>
-								<p>Thank you for visiting my portfolio! If you’d like a closer look at my qualifications, experiences, and more relevant information, you can download my resume by clicking on the image to the right.</p>
-									<div class="image-row">
-										<img src="images/resumethumbnail.jpg" alt="Resume thumbnail">
-									</div>
-								<!-- move resume thumbnail image to right side of text - click to download -->
+								<div class="image-with-text">
+									<p>Thank you for visiting my portfolio! If you’d like a closer look at my qualifications, experiences, and more relevant information, you can download my resume by clicking on the image to the right.</p>
+										<a href="files/kierawalkerden_secondary_tas_teaching_resume.pdf" download><img src="images/resumethumbnail.jpg" alt="Resume thumbnail"></a>
+								</div>
 								<br>
 								<p style="font-size: 20px;"><b>Professional Profile</b></p>
 								<p>I am currently studying a Bachelor of Education (Secondary)/Bachelor of Arts (Design Innovation and Technologies) at Australian Catholic University, and I am passionate about inspiring students through engaging, inclusive, and innovative learning experiences. My focus on Design and Technology education stems from a desire to help students think creatively, solve problems, and apply their knowledge in meaningful ways.</p>
@@ -239,7 +243,7 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
                                 <h2 class="major">Contact Me</h2>
 								<p style="font-size: 20px;"><b>Get in Touch</b></p>
 								<p>If you’d like to connect about teaching, design, or collaboration, please reach out via email:</p>
-								<!-- insert email icon on left of text --> <p>kierawalkerden05@gmail.com</p>
+								<p><img src="images/email.png" alt="Email symbol" class="email-symbol">kierawalkerden05@gmail.com</p>
 								<br>
 								<p>Alternatively, fill out the form below and I will get back to you:</p>
 								<p style="font-size: 20px;"><b>Contact Form</b></p>
@@ -268,9 +272,9 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
 						<!-- Thank You -->
                             <article id="thanks">
                                 <h2 class="major">Form Successfully Submitted!</h2>
-								<span class="image main"><img src="images/thankyoubanner.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<span class="image main"><img src="images/thankyoubanner.jpg" alt="Thank You Banner"/></span>
+								<p>Thank you for submitting a contact form!</p>
+								<p>Your message is sitting in my inbox and i’ll make sure to get back to you as soon as possible!</p>
 							</article>
 
 						<!-- Elements -->
