--- a/index.html
+++ b/index.html
@@ -106,7 +106,10 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
 									</div>
 								<p>I began by designing the stool and cutting all timber components to size. The pieces were assembled using various joinery techniques, including the domino jointer, to ensure structural stability. I designed the fabric myself, which was printed at the university and then upholstered onto the stool. To refine the finish, I sanded the timber surfaces and applied a protective finish. The seat and backrest were shaped with a vacuum sealing process to create ergonomic curves.</p>
 									<div class="image-cad">
-										<img src="images/stoolcad.jpg" alt="Bluey Stool CAD drawing">
+										<p>Click on the image to download a high quality PDF copy of the Main Assembly drawing</p>
+										<a href="files/stool_cad.pdf" download>
+											<img src="images/stoolcad.jpg" alt="Bluey Stool CAD drawing">
+										</a>
 									</div>
 								<br>
 								<p style="font-size: 18px;"><b>Timber - Heirloom Box</b></p>
@@ -117,9 +120,10 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
 									</div>
 								<p>After selecting and preparing the blackwood, I cut the components using precise measuring and cutting techniques. The decorative floral veneer was cut using a scroll saw and adhered to the lid through a vacuum sealing process to ensure a secure bond. The keyed mitre joints were carefully executed to produce a structurally sound and visually refined box. The finished piece demonstrated both technical skill in joinery and creativity in veneer design.</p>
 									<div class="image-cad">
-										<img src="images/heirloomboxcad.jpg" alt="Heirloom Box CAD drawing">
-										<img src="images/heirloomboxlidcad.jpg" alt="Heirloom Box lid CAD drawing">
-										<img src="images/heirloomboxbasecad.jpg" alt="Heirloom Box base CAD drawing">
+										<p>Click on the image to download a high quality PDF copy of the Main Assembly drawing</p>
+										<a href="files/heirloombox_full_cad.pdf" download>
+											<img src="images/heirloomboxcad.jpg" alt="Heirloom Box CAD drawing">
+										</a>
 									</div>
 								<br>
 								<p style="font-size: 18px;"><b>Timber - Laminated Board</b></p>
@@ -130,7 +134,10 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
 									</div>
 								<p>For this project, I was required to select and cut multiple strips of timber, plane them until their surfaces were flush, arrange them in a cohesive order, and join them together using adhesive. Once the glue had fully dried, I sanded the assembly and applied grapeseed oil as a finish to ensure it was food safe.</p>
 									<div class="image-cad">
-										<img src="images/boardcad.jpg" alt="Laminated Board CAD drawing">
+										<p>Click on the image to download a high quality PDF copy of the Main Assembly drawing</p>
+										<a href="files/laminated_board_cad.pdf" download>
+											<img src="images/boardcad.jpg" alt="Laminated Board CAD drawing">
+										</a>
 									</div>
 								<br>
 								<p style="font-size: 18px;"><b>Metal - Tool Box</b></p>
@@ -140,7 +147,6 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
 										<img src="images/toolbox2.JPEG" alt="Toolbox above">
 									</div>
 								<p>To begin, I marked out the required dimensions on the sheet metal and cut the pieces using metal snips. The sheet metal was then bent into the desired shapes using both the Magnabend and a pan brake. To prepare the components for assembly, I used a centre punch to mark the rivet locations and a power drill to create holes. Finally, the pieces were securely fastened together at each end using a riveting gun, resulting in a sturdy and functional toolbox.</p>
-								<!-- Insert image of side of box showing rivets -->
 								<br>
 								<p style="font-size: 18px;"><b>Metal - Jewellery Pair</b></p>
 								<p>This project required designing and producing a matching jewellery pair consisting of a fidget ring and a necklace, with connected aesthetic elements. The design incorporated a flower motif, with the ring and necklace sharing thematic cohesion. The project aimed to combine functional movement, material contrast, and detailed craftsmanship.</p>
@@ -148,7 +154,6 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
 										<img src="images/jewellery.JPEG" alt="Jewellery pair">
 									</div>
 								<p>The ring band was crafted from silver, the flower petals from brass, and the flower centre from copper. I cut the components from sheet metal using a jewellery saw and a laser cutter to ensure precise shapes. The petals were joined to the ring band using a rivet made from copper wire, allowing the ring to spin. The metal pieces were shaped with a heat gun and finished by sanding and polishing. For the necklace, I created a copper wire circle, soldered it onto the chain, and attached the second flower component, completing the cohesive set.</p>
-								<!-- Insert CAD image once completed -->
 								<br>
 								<p style="font-size: 18px;"><b>Metal - Hacksaw</b></p>
 								<p>This project involved the design and manufacture of a fully functional metal hacksaw featuring a custom ergonomic handle. The task required the integration of digital design, advanced metalworking techniques, and safe work practices. Using Fusion 360, I designed a handle that was tailored for comfort and usability, which was later 3D printed to fit the dimensions of the hacksaw frame I constructed. The project also included the creation of a Safe Work Method Statement (SWMS) and a hand-drawn infographic poster identifying the parts and functions of the hacksaw. These can be found at the bottom of this project's section.</p>
@@ -180,8 +185,7 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
 									<div class="image-row">
 										<img src="images/bookmarkfront.JPEG" alt="Felt Bookmark front">
 										<img src="images/bookmarkback.JPEG" alt="Felt Bookmark back">
-										<img src="images/bannerfront.JPEG" alt="Felt Banner front"> <!-- Update image when completed -->
-										<!-- Add Banner backside image once completed -->
+										<img src="images/bannerfront.JPEG" alt="Felt Banner front">
 									</div>
 								<p>For the light-up bookmark, I constructed a unique piece from commercial wool felt and hand-made felt, embedding a soft circuit with a power source, switch, and LED. The circuit was integrated through hand-stitching and embroidery, using chain stitch and lazy daisy motifs in yellow, orange, and green, with the LED positioned at the centre of the flower to illuminate it.</p>
 								<p>For the felt banner, I created a multi-layered, hand-stitched piece inspired by a classroom art activity. The design incorporated blended felt to emulate a watercolour effect, with hand-stitched flowers in purple, green, and blue. Three LEDs were embedded in the centres of selected flowers to create a variable light effect and a subtle three-dimensional quality. Both projects required experimentation with design options, careful cutting, hand-stitching, needle-felting, and integration of functional electronic components to achieve the intended visual and interactive outcomes.</p>
@@ -189,7 +193,6 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
 										<img src="images/bookmarkillustrationfront.JPEG" alt="Felt Bookmark illustration front">
 										<img src="images/bookmarkillustrationback.JPEG" alt="Felt Bookmark illustration back">
 										<img src="images/bannerinitialillustration.JPEG" alt="Felt Banner initial illustration">
-										<!-- Add Banner backside illustration once completed -->
 									</div>
 								<br>
 							</article>
@@ -211,7 +214,6 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
 												<p class="image-caption">Click on the image above to download this resource!</p>
 											</div>
 									</div>
-								<!-- put resources side by side -->
 								<p><b>Lesson Topic: Factors Affecting Design / Design Detective</b></p>
 									<div class="image-with-text">
 									<p>In this task students will learn about factors that influence design by defining each factor with an example. They will then choose a product, identify which factors shaped its design, and use AI to check and extend their understanding.</p>
@@ -228,7 +230,9 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
 								<p style="font-size: 20px;"><b>Download My Resume!</b></p>
 								<div class="image-with-text">
 									<p>Thank you for visiting my portfolio! If you’d like a closer look at my qualifications, experiences, and more relevant information, you can download my resume by clicking on the image to the right.</p>
-										<a href="files/kierawalkerden_secondary_tas_teaching_resume.pdf" download><img src="images/resumethumbnail.jpg" alt="Resume thumbnail"></a>
+									<a href="files/kierawalkerden_secondary_tas_teaching_resume.pdf" id="resumeLink" download>
+										<img src="images/resumethumbnail.jpg" alt="Download Resume" style="width:150px;"></a>
+									<div id="messageContainer"></div>
 								</div>
 								<br>
 								<p style="font-size: 20px;"><b>Professional Profile</b></p>
@@ -247,7 +251,7 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
 								<br>
 								<p>Alternatively, fill out the form below and I will get back to you:</p>
 								<p style="font-size: 20px;"><b>Contact Form</b></p>
-								<form method="post" action="https://formsubmit.co/kierawalkerden05@gmail.com">
+								<form id="contactForm" method="post" action="https://formsubmit.co/kierawalkerden05@gmail.com">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -267,14 +271,6 @@ License: Creative Commons Attribution 3.0 (https://html5up.net/license) -->
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
 								</form>
-							</article>
-						
-						<!-- Thank You -->
-                            <article id="thanks">
-                                <h2 class="major">Form Successfully Submitted!</h2>
-								<span class="image main"><img src="images/thankyoubanner.jpg" alt="Thank You Banner"/></span>
-								<p>Thank you for submitting a contact form!</p>
-								<p>Your message is sitting in my inbox and i’ll make sure to get back to you as soon as possible!</p>
 							</article>
 
 						<!-- Elements -->
